# OxidationEngine

./: .gitignore  .typos.toml  Cargo.toml  README.md  flake.nix
.github/workflows/: format.yml  rust.yml
examples/hello-triangle/: Cargo.toml
examples/hello-triangle/src/: main.rs
libs/oxidation-app/: Cargo.toml
libs/oxidation-app/src/: lib.rs
libs/oxidation-utils/: Cargo.toml
libs/oxidation-utils/src/: handle.rs
oxidation-engine/: Cargo.toml
oxidation-engine/src/: lib.rs
oxidation-vk/: Cargo.toml
oxidation-vk/src/: commands.rs  device.rs  instance.rs  lib.rs  sampler_cache.rs  staging_pool.rs  swapchain.rs  texture.rs
oxidation-vk/src/backend/: mod.rs
