[package]
name = "oxidation-engine"
version = "0.1.0"
edition= "2021"
rust-version = "1.82.0"
homepage = "https://github.com/OxidationEngine"
keywords = ["vulkan", "3D", "graphics"]
categories = ["rendering::graphics-api"]

[dependencies]
ash =  { workspace = true }
log =  { workspace = true }
nalgebra-glm =  { workspace = true }
oxidation-vk =  { workspace = true }
oxidation-utils = { workspace = true }
