[package]
name = "oxidation-app"
version = "0.1.0"
edition= "2024"
rust-version = "1.88.0"
homepage = "https://github.com/OxidationEngine"
keywords = ["vulkan", "3D", "graphics"]
categories = ["rendering::graphics-api"]

[dependencies]
winit = { workspace = true }
ash-window = { workspace = true }
oxidation-vk = { workspace = true }
oxidation-engine = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }